--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,9 +15,13 @@
         android:textAlignment="center"
         android:layout_centerInParent="true"/>
 
-    <!--<ImageView
+    <ImageView
+        android:id="@+id/checkmark"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />-->
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:src="@drawable/ic_check_100dp"
+        android:visibility="gone"/>
 
     <include
         layout="@layout/keyboard"
